--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  background-color: black;
+  background-color: rgb(22, 14, 184);
   color: white;
   padding: 15px;
   font-size: 2em;
@@ -49,4 +49,33 @@
 .nav a {
   color: white;
   text-decoration: none;
+}
+
+
+.table{
+  display:flex;
+  justify-content: space-between;
+  padding-left: 3em;
+  padding-right: 3em;
+  border-bottom: solid black;
+  height: 48px;
+}
+
+.stocklist{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+.name{
+  width: 33%;
+  text-align: left;
+  border-bottom: solid black;
+}
+
+
+.price  {
+  text-align: left;
+  /* text-decoration: none; */
 }
