--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+body{
+  background-color: black;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -57,7 +61,7 @@
   justify-content: space-between;
   padding-left: 3em;
   padding-right: 3em;
-  border-bottom: solid black;
+  /* border-bottom: solid black; */
   height: 48px;
 }
 
@@ -66,16 +70,39 @@
   justify-content: space-between;
   padding-left: 4em;
   padding-right: 4em;
+  color: white;
 }
 
 .stocks{
-  width: 50%;
+  width:  35%;
   text-align: left;
   border-bottom: solid black;
+  font-size: larger;
+  color: white;
+}
+
+.stocks2{
+  text-align: center;
 }
 
 
 .price  {
-  text-align: left;
+  text-align: right;
+  color: white;
   /* text-decoration: none; */
 }
+
+.h1{
+  color: white;
+}
+
+.h3{
+  text-decoration: underline;
+  color: white;
+  text-align: center
+ }
+ .p1{
+  text-decoration: underline;
+  color: white;
+  text-align: center
+ }
